// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Adds namespace to complex styled-component 1`] = `
"
const styled = { div() {} };

const MyStyledComponent = styled.div\`
  background-color: \${props => (props.isDark ? 'red' : 'yellow')};
  color: \${props => (props.isDark ? 'white' : 'navy')};
  font-size: 30px;
  padding: 20px;

  & {
    border: 1px solid black;
  }
\`;

      ↓ ↓ ↓ ↓ ↓ ↓

const styled = { div() {} };

const MyStyledComponent = styled.div\`
&& {
  background-color: \${props => props.isDark ? 'red' : 'yellow'};
  color: \${props => props.isDark ? 'white' : 'navy'};
  font-size: 30px;
  padding: 20px;

  & {
    border: 1px solid black;
  }
}
\`;
"
`;

exports[`Adds namespace to simple styled-component 1`] = `
"
const styled = { div() {} };

const MyStyledComponent = styled.div\`
  background-color: 'yellow';
\`;

      ↓ ↓ ↓ ↓ ↓ ↓

const styled = { div() {} };

const MyStyledComponent = styled.div\`
&& {
  background-color: 'yellow';
}
\`;
"
`;

exports[`Uses a namespace specified in the options 1`] = `
"
const styled = { div() {} };

const MyStyledComponent = styled.div\`
  background-color: \${props => (props.isDark ? 'red' : 'yellow')};
  color: \${props => (props.isDark ? 'white' : 'navy')};
  font-size: 30px;
  padding: 20px;

  & {
    border: 1px solid black;
  }
\`;

      ↓ ↓ ↓ ↓ ↓ ↓

const styled = { div() {} };

const MyStyledComponent = styled.div\`
.moreSpecific & {
  background-color: \${props => props.isDark ? 'red' : 'yellow'};
  color: \${props => props.isDark ? 'white' : 'navy'};
  font-size: 30px;
  padding: 20px;

  & {
    border: 1px solid black;
  }
}
\`;
"
`;
